[package]
name = "rust_alarm"
version = "0.1.0"
authors = ["mchapala ch.murali@gmail.com"]

[dependencies]
rand = "*"
byteorder = "*"
futures = "*"
tokio-core = { git = "https://github.com/tokio-rs/tokio-core" }
tokio-proto = { git = "https://github.com/tokio-rs/tokio-proto" }
tokio-service = { git = "https://github.com/tokio-rs/tokio-service" }
tokio-tls = { git = "https://github.com/tokio-rs/tokio-tls" }
tokio-curl = { git = "https://github.com/tokio-rs/tokio-curl" }
tokio-minihttp = { git = "https://github.com/tokio-rs/tokio-minihttp" }
curl = "0.3.6"

[replace]
"tokio-core:0.1.0" = { git = "https://github.com/tokio-rs/tokio-core" }
